# random-table-2026

./: .gitignore  01_brainstorming.ipynb  README.md  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
data/: example.-table.csv
notebooks/: 01_brainstorming.ipynb  02_checking_imports.ipynb
src/randomtable2026/: __init__.py
tests/: test_random_tables.py
